[gd_scene load_steps=8 format=2]

[ext_resource path="res://theme/pompy_ui.tres" type="Theme" id=1]
[ext_resource path="res://actor/pause_popup.gd" type="Script" id=2]
[ext_resource path="res://theme/font/pompy_sans_24.tres" type="DynamicFont" id=3]
[ext_resource path="res://title_screen/background_splash_transparent.png" type="Texture" id=4]
[ext_resource path="res://destroyed_ship/transition_1.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "fade"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TitleBox/Title:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.65, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TitleBox:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PausePopup" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0313726, 0.0784314, 0.117647, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 1 )
anims/fade_in = SubResource( 2 )

[node name="TitleBox" type="VBoxContainer" parent="."]
margin_left = 256.0
margin_top = 89.0
margin_right = 421.0
margin_bottom = 257.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="TitleBox"]
margin_right = 225.0
margin_bottom = 48.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "Game Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="TitleBox"]
margin_right = 40.0
margin_bottom = 20.0
text = "resume"

[node name="Quit" type="Button" parent="TitleBox"]
margin_top = 100.0
margin_right = 225.0
margin_bottom = 120.0
text = "quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="about_to_show" from="." to="." method="_on_PausePopup_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_PausePopup_popup_hide"]
[connection signal="pressed" from="TitleBox/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="TitleBox/Quit" to="." method="_on_Quit_pressed"]
